OPENNLP-1394 Reduce compiler warnings during build (#432)
* OPENNLP-1394 Reduce compiler warnings during build

- eliminates several compiler warnings by more consequent use of generic types
- reduces use of deprecated api calls to external deps
- introduces Sample interface as a marker for similar impl classes
- introduces Trainer interface as a marker for similar impl classes
- adapts previously deprecated methods in AbstractTrainer
- removes deprecated constructor 'TrainingParameters(Map<String,String> map)' in favor of 'public TrainingParameters(Map<String,Object> map)'
- removes deprecated methods in TrainingParameters

* OPENNLP-1394 Reduce compiler warnings during build

- eliminates more compiler warnings related to raw use of parameterized types
- reduces use of deprecated api calls to external deps
- removes orphaned methods / constructors that where not used or not required anymore
- fixes typos and improves JavaDoc

* OPENNLP-1361 - Upgrade JUnit 4 to version 5 (#431)

* Revert "OPENNLP-1361 - Upgrade JUnit 4 to version 5 (#431)"

This reverts commit ced4854ee55a268dce162e93c135969c6af78d75.

* OPENNLP-1394 Reduce compiler warnings during build

- adapts to changes brought by OPENNLP-1361 (-> JUnit5), fixes compile error